[package]
name = "opifex"
version = "0.3.0"
edition = "2021"
authors = [ "claudio carraro <carraro.claudio@gmail.com>" ]

repository = "https://github.com/cardo-org/opifex"

description = "Opifex is a Latin word meaning artisan or manufacturer and referring to a worker who created something."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"

[dev-dependencies]
#opifex = { path = "./", version = "0.3" }

